fixed some grid styles

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -44,17 +44,20 @@ body {
     width: 66vw;
     display: gird;
     align-content: space-around;
-    justify-items: center;
+    justify-items: stretch;
     // grid-template-rows: 1fr 2fr 1fr;
 }
+
+.logo-main,
+.recent-posts {               // this lump of code changes only the 'daily smarty' logo at the top of the homepage and "recent posts"
+    display: grid;
+    justify-content: center;
+}
+
+
 
 $color-gray-one: #666666;
 $color-gray-two: #B3B3B3;
 
 @import "./searchBar";
 
-// .logo-main {               // this lump of code changes only the 'daily smarty' logo at the top of the homepage
-//     display: grid;
-//     justify-content: center;
-//     align-items: center;
-// }
