--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -44,7 +44,7 @@ body {
     width: 66vw;
     display: gird;
     align-content: space-around;
-    justify-items: stretch;
+    // justify-items: stretch;
     // grid-template-rows: 1fr 2fr 1fr;
 }
 
@@ -54,10 +54,17 @@ body {
     justify-content: center;
 }
 
-
+ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
 
 $color-gray-one: #666666;
 $color-gray-two: #B3B3B3;
+$color-blue-one: #0079FF;
 
 @import "./searchBar";
+@import "./recentPosts";
+
 
