--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -14,11 +14,8 @@ html {
 body {
     font-family: 'Lato', sans-serif;
 
-
-
     // overflow-x: hidden;
     // font-weight: normal;
-
     // -webkit-font-smoothing: antialiased;
     // -moz-osx-font-smoothing: grayscale;
     // text-rendering: optimizeLegibility;
@@ -39,14 +36,6 @@ body {
     display: grid;
     justify-content: center;
 }
-.home {
-    height: 100vh;
-    width: 66vw;
-    display: gird;
-    align-content: space-around;
-    // justify-items: stretch;
-    // grid-template-rows: 1fr 2fr 1fr;
-}
 
 .logo-main,
 .recent-posts {               // this lump of code changes only the 'daily smarty' logo at the top of the homepage and "recent posts"
@@ -60,11 +49,18 @@ ul {
     list-style-type: none;
 }
 
+
+
 $color-gray-one: #666666;
 $color-gray-two: #B3B3B3;
 $color-blue-one: #0079FF;
 
+@import "./mixins";
 @import "./searchBar";
 @import "./recentPosts";
+@import "./post";
+@import "./home";
+@import "./results";
+
 
 
