added no-content to post links when post links are empty for post, and applied flex styles to post-links

--- a/src/style/results.scss
+++ b/src/style/results.scss
@@ -39,7 +39,8 @@
     }
 
     .result-post__links {
-        // display: flex;
+        display: flex;
+        // height: 70px;
 
     }
 }
@@ -47,6 +48,8 @@
 .post__link {
     min-height: 70px;
     display: flex;
+    flex-basis: 205px;
+    margin-right: 37px;
 
     .post-link__box {
         min-width: 70px;
