--- a/src/style/searchBar.scss
+++ b/src/style/searchBar.scss
@@ -40,8 +40,14 @@
     align-content: center;
     justify-items: center;
 
-    height: 118px;
-    font-size: 40px;
+    input {
+        height: 118px;
+        font-size: 40px;
+        @media screen and (max-width: 600px) {
+            font-size: 23px;
+            height: 59px;
+        }
+    }
 }
 
 .search-bar__results {
